Fix for Projects not showing all of items. ProjectViewer slider functional (WIP).

--- a/src/assets/components/Projects/projectViewer.scss
+++ b/src/assets/components/Projects/projectViewer.scss
@@ -18,23 +18,46 @@
 
   .image-slider {
     position: relative;
-    width: 100%;
-    height: 70%;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    display: flex;
+    flex-direction: row;
+    transform: translate3d(0, 0, 0);
+    width: 900px;
+    margin: 1rem auto; 
     overflow: hidden;
-    overflow-x: auto;
-    grid-row: 2;
+    background-color: blue;
 
-    .buttons {
-      position: absolute;
+    div {
       width: 100%;
-      height: 30%;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-around;
-      top: 50%;
-      transform: translateY(-50%);
+    }
+    
+    img {
+      width: 100%;
+      height: 100%;
+    }
+
+    &.actived {
+      &[data-animated=true] {
+        border: 5px solid lime;
+        overflow: hidden;
+        -webkit-mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+        mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+      
+        .sliding {
+          display: flex;
+          width: max-content;
+          flex-wrap: nowrap;
+          animation: scroll 20s linear infinite;
+          &:hover {
+            animation-play-state: paused;
+          }
+        }
+
+        @keyframes scroll {
+          to {
+            transform: translate(calc(-50% - 0.5rem));
+          }
+        }
+      }
     }
   }
 
